[package]

name = "chip8_vm"
description = "Virtual machine for the CHIP-8 programming language"
readme = "../README.md"
license = "MIT"
keywords = ["vm", "chip-8",]
homepage = "https://github.com/chip8-rust/chip8-rust"
repository = "https://github.com/chip8-rust/chip8-rust.git"
documentation = "https://chip8-rust.github.io/chip8-rust/chip8_vm/"
version = "0.0.2"
authors = [
    "Jake Kerr <kodafox@gmail.com>",
    "robo9k <robo@9k.lv>",
]

[dependencies]
rand = "0.1.2"
